# DocumentDBCpp

./: .gitignore  CMakeLists.txt  DocumentDBCpp.sln  DocumentDBCpp.v120.sln  DocumentDBCpp.v140.sln  DocumentDbCpp.nuspec  DocumentDbCpp.v120.nuspec  DocumentDbCpp.v120.targets  DocumentDbCpp.v140.nuspec  DocumentDbCpp.v140.targets  LICENSE  README.md
cmake/Modules/: FindCasablanca.cmake  LibFindMacros.cmake
docdbconsoleapp/: docdbconsoleapp.cpp  docdbconsoleapp.vcxproj  docdbconsoleapp.vcxproj.filters  packages.config  stdafx.cpp
hellodocumentdb/: CMakeLists.txt  hellodocumentdb.cpp  hellodocumentdb.v120.vcxproj  hellodocumentdb.v120.vcxproj.filters  hellodocumentdb.v140.vcxproj  hellodocumentdb.vcxproj  packages.config  stdafx.cpp  stdafx.h
lib/: DocumentDBCpp.v120.vcxproj  DocumentDBCpp.v120.vcxproj.filters  DocumentDBCpp.v140.vcxproj  DocumentDBCpp.v140.vcxproj.filters  DocumentDBCpp.vcxproj  DocumentDBCpp.vcxproj.filters  packages.config
lib/include/: Attachment.h  AttachmentIterator.h  Collection.h  ConnectionHelper.h  Database.h  Document.h  DocumentClient.h  DocumentDBConfiguration.h  DocumentDBConstants.h  DocumentDBEntity.h  DocumentIterator.h  Index.h  IndexPath.h  IndexType.h  IndexingMode.h  IndexingPolicy.h  Permission.h  StoredProcedure.h  StoredProcedureIterator.h  Trigger.h  TriggerIterator.h  TriggerOperation.h  TriggerType.h  User.h  UserDefinedFunction.h  UserDefinedFunctionIterator.h  exceptions.h  hmac_bcrypt.h
lib/src/: Attachment.cpp  AttachmentIterator.cpp  CMakeLists.txt  Collection.cpp  ConnectionHelper.cpp  Database.cpp  Document.cpp  DocumentClient.cpp  DocumentDBConfiguration.cpp  DocumentDBEntity.cpp  DocumentIterator.cpp  Index.cpp  IndexPath.cpp  IndexingPolicy.cpp  Permission.cpp  StoredProcedure.cpp  StoredProcedureIterator.cpp  Trigger.cpp  TriggerIterator.cpp  User.cpp  UserDefinedFunction.cpp  UserDefinedFunctionIterator.cpp  Utils.cpp  hmac_bcrypt.cpp  hmac_bcrypt_unix.cpp
test/: CMakeLists.txt  Test.v120.vcxproj  Test.v140.vcxproj  Test.vcxproj  Test.vcxproj.filters  account_configuration.txt  test.cpp
